src/css/ranking.css
.ranking-date { 
    text-align: center;
    
    font: var(--fw-bold) var(--fs-h1) var(--font-main);
}

.ranking-table { 
    width: 100%;
}

.people-rate-card { 
    display: flex;
    flex-direction: column;

    border-radius: 16px;

    padding: 32px;
    margin: 8px 0px;
    gap: 32px;

    text-align: center;

    background-color: var(--color-off-white-campfire);
}

@media (min-width: 1024px) {
    .people-rate-card { 
        flex-direction: row;

        padding: 32px;
        margin: 8px 0px;
        gap: 32px;
    }
}

.all-checkbox-container { 
    display: grid;
    grid-template-columns: repeat(3, 1fr);

    gap: 8px;
}

@media (min-width: 1024px) {
    .all-checkbox-container { 
        display: grid;
        grid-template-columns: repeat(9, 1fr);

        gap: 8px;
    }
}

.checkbox-container label { 
    display: flex;
    flex-direction: column;

    text-align: center;
    align-items: center;

    font: var(--fw-regular) var(--fs-caption) var(--font-main);
}

.checkbox-score { 
    appearance: none;

    cursor: pointer;

    padding: 16px;
    border-radius: 4px;
    border-style: solid;
    border-color: var(--color-campfire);
}

.checkbox-score:checked {
    background-color: var(--color-campfire);
}

.people-rated-card { 
    display: flex;

    border-radius: 16px;

    margin: 8px 0px;
    gap: 32px;

    background-color: var(--color-off-white-campfire);
}

@media (min-width: 1024px) {
    .people-rated-card { 
        width: 100%;
    }
}

.card-people-name { 
    align-content: center;

    padding: 32px;

    font: var(--fw-bold) var(--fs-body) var(--font-main);
}

@media (min-width: 1024px) {
    .card-people-name { 
        width: 128px;
    }
}

.card-people-score { 
    font: var(--fw-regular) var(--fs-body) var(--font-main);

    background-color: var(--color-campfire);
    color: white;

    border-radius: 8px;

    padding: 32px;
    width: 100%;
}

.container-buttons { 
    display: flex;

    gap: 16px;
}

input[type="button"] { 
    display: flex;

    padding: 16px;
    border-radius: 8px;
    border-width: 4px;
    border-style: solid;
    border-color: transparent;


    box-sizing: border-box;
    vertical-align: middle;

    font: var(--fw-regular) var(--fs-caption) var(--font-main);
}

#button-addPeople { 
    cursor: pointer;

    border-color: var(--color-campfire);

    background-color: var(--color-off-white-campfire);
    color: var(--color-campfire);
}

#button-addPeople:hover { 
    background-color: var(--color-campfire);
    color: var(--color-off-white-campfire);
}

#button-copyRanking, 
#button-confirmScore {
    cursor: pointer;

    background-color: var(--color-campfire);
    color: var(--color-off-white-campfire);
}

#button-copyRanking:hover, 
#button-confirmScore:hover { 
    background-color: var(--color-off-white-campfire);
    color: var(--color-campfire);
}

